@@ -21,9 +21,11 @@ FreeRADIUS 3.0.21 Thu 14 Nov 2019 12:00:00 EDT urgency=low
 	* Sample schema extensions for summarizing data in SQL.
 	  See mods-config/sql/main/*/process-radacct.sql
 	  Many patches from Terry Burton.
-	* Update ditionary.aerohive, dictionary.fortinet and
+	* Update dictionary.aerohive, dictionary.fortinet and
 	  dictionary.arista.
 	* Many updates to RPM and jenkins builds from Matthew Newton
+	* Added %C (time now in seconds) and %c (microsecond component of now)
+	  back-ported from the "master" branch.
 
 	Bug fixes
 	* Various fixes found by PVS-Studio.
